--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "author": "James Weston <james@tenseven.org>",
   "name": "traceroute",
   "description": "Wrapper around native traceroute command",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jaw187/node-traceroute.git},
-  "engines": {
-    "node": "~0.6.5"
+    "url": "git://github.com/jaw187/node-traceroute.git}
   },
   "dependencies": {},
   "devDependencies": {}
